# GiraffePython

./: .gitignore
Grimoire/: .gitignore  README.md  pyproject.toml  requirements.txt  test_recs.py
Grimoire/frontend/: app.js  index.css  index.html
Grimoire/src/grimoire/: books_api.py  jobs.py  main.py  models.py
Grimoire/tests/: test_api.py  test_db.py  test_jobs.py
HW2/: async.py  report.txt  sync.py  test.py
