[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grimoire"
version = "0.1.0"
description = "A real-time book recommendation engine using Hardcover API"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "polars",
    "numpy",
    "requests",
    "python-dotenv",
    "apscheduler"
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
